--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "byteplus/branch-name-display",
-    "description": "Git Branch name display",
+    "description": "Git branch name on your Laravel application",
     "type": "dev",
     "license": "MIT",
     "autoload": {
@@ -15,7 +15,9 @@
     ],
     "minimum-stability": "dev",
     "prefer-stable": true,
-    "require": {},
+    "require": {
+        "php": "^8.0"
+    },
     "extra": {
         "laravel": {
             "providers": [
